# solard

./: Cargo.toml  build.sh
src/: app.rs  db_io.rs  main.rs  protocol.rs  serial_io.rs  solar_data.rs
