[package]
name = "solard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
num_enum_derive = "0.5.7"
num_enum = "0.5.7"

[dependencies.serialport]
version = "4.2.0"
default-features = false

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

